bk_ida/gccida/g3/simplify_comparison
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_comparison/src/combine.c:10393:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code  simplify_comparison( rtx_code code, rtx *pop0, rtx *pop1) 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_comparison/src/combine.c:10393:32: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code  simplify_comparison( rtx_code code, rtx *pop0, rtx *pop1) 
                               ^
                               enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_comparison/src/combine.c:10395:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v3; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_comparison/src/combine.c:10415:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v23; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_comparison/src/combine.c:10423:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v31; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_comparison/src/combine.c:10446:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v54; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_comparison/src/combine.c:10449:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v57; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_comparison/src/combine.c:10450:4: error: expected ';' after expression
rtx compound_operation; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_comparison/src/combine.c:10450:5: error: use of undeclared identifier 'compound_operation'; did you mean 'make_compound_operation'?
rtx compound_operation; // r14 
    ^~~~~~~~~~~~~~~~~~
    make_compound_operation
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_comparison/src/combine.c:6337:1: note: 'make_compound_operation' declared here
make_compound_operation (x, in_code)
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_comparison/src/combine.c:10451:4: error: expected ';' after expression
rtx v59; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_comparison/src/combine.c:10451:5: error: use of undeclared identifier 'v59'
rtx v59; // rbp 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_comparison/src/combine.c:10452:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v60; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_comparison/src/combine.c:10458:4: error: expected ';' after expression
rtx v67; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_comparison/src/combine.c:10458:5: error: use of undeclared identifier 'v67'
rtx v67; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_comparison/src/combine.c:10460:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v69; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_comparison/src/combine.c:10472:4: error: expected ';' after expression
rtx v81; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_comparison/src/combine.c:10472:5: error: use of undeclared identifier 'v81'
rtx v81; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_comparison/src/combine.c:10476:4: error: expected ';' after expression
rtx v85; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_comparison/src/combine.c:10476:5: error: use of undeclared identifier 'v85'
rtx v85; // rax 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_comparison/src/obj/combine.o] Error 1
